# ak_monitor_client_rs

./: Cargo.toml  Cross.toml  README.md  build.sh  setup-client-rs.sh
.github/workflows/: Build.yaml
src/: args.rs  build_message.rs  get_info.rs  install.rs  main.rs  manage_utils.rs
