[package]
name = "ak_monitor_client_rs"
version = "0.0.2"
edition = "2021"
authors = ["GenshinMinecrat <gm@highp.ing>"]
description = "Akile Monitor Client By Rust"
readme = "README.md"
repository = "https://github.com/GenshinMinecraft/ak_monitor_client_rs"
license = "WTFPL"


[dependencies]
tokio = { version = "1.42.0", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.24.0", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
futures-util = { version = "0.3.31", default-features = false }
rustls = { version = "0.23.19", default-features = false, features = ["std", "ring"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.133", default-features = false, features = ["std"] }
flate2 = { version = "1.0.35", default-features = false, features = ["rust_backend"] }
sysinfo = { version = "0.33.0", default-features = false, features = ["system"] }
whoami = "2.0.0-pre.0"
heim-virt = "0.1.0-alpha.1"
systemstat = "0.2.3"
clap = { version = "4.5.22", default-features = false, features = ["help", "derive", "color", "std"] }
log = { version = "0.4.22", default-features = false, features = ["std"] }
simple_logger = "5.0.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[workspace.metadata.cross.target.x86_64-unknown-linux-musl]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.arm-unknown-linux-gnueabi]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.arm-unknown-linux-gnueabihf]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.aarch64-unknown-linux-musl]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.i686-unknown-linux-gnu]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.i686-unknown-linux-musl]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.arm-unknown-linux-musleabi]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.arm-unknown-linux-musleabihf]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.armv5te-unknown-linux-gnueabi]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.armv5te-unknown-linux-musleabi]

[workspace.metadata.cross.target.armv7-unknown-linux-musleabi]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.armv7-unknown-linux-musleabihf]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = ["rustup component add rust-src --toolchain nightly"]

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabi]
pre-build = ["rustup component add rust-src --toolchain nightly"]